--- a/index.html
+++ b/index.html
@@ -4,14 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pokeapi.co</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet"  href="style.css">
+    <link rel="stylesheet" href="restet.css">
+ 
 </head>
 <body>
-    <div id="search-bar">
-        <input id="search-input" type="text" placeholder="Digite o ID ou nome do Pokémon">
-        <button id="search-button">Pesquisar</button>
-      </div>
-    
+
+    <header>
+        <div>
+            <img src="./imagens/pokeapi_256.png" alt="logo pokeapi" class="logo__header">
+        </div>
+        <div id="search-bar">
+            <input id="search-input" type="text" placeholder="Digite o ID ou nome do Pokémon">
+            <button id="search-button">Pesquisar</button>
+        </div>
+    </header>
       <div id="pokemon-info">
         <h2>Informações do Pokémon</h2>
         <div>
