adicionando o card principal e criando variaveis para as cores principais

--- a/index.html
+++ b/index.html
@@ -20,14 +20,16 @@
                      </div>
         </div>             
     </header>
-    <div id="pokemon-info" class="container__card__pokemon">
-        <h2 class="card__informacao">Informações do Pokémon</h2>
-        <div>
-          <img id="pokemon-image" src="" alt="Imagem do Pokémon" class="card__imagem">
-          <h3 id="pokemon-name" class="card__nome"></h3>
-          <p id="pokemon-type" class="card__tipo"></p>
+    <section>
+        <div id="pokemon-info" class="container__card__pokemon">
+            <h2 class="card__informacao">Informações do Pokémon</h2>
+            <div class="card__container">
+            <img id="pokemon-image" src="" alt="Imagem do Pokémon" class="card__imagem">
+            <h3 id="pokemon-name" class="card__nome"></h3>
+            <p id="pokemon-type" class="card__tipo"></p>
+            </div>
         </div>
-      </div>
+    </section>
     
       <script src="script.js"></script>
     
