centralizando o menu e o icone

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           class="logo__header"
         />
 
-        <div id="search-bar">
+        <div id="search-bar" class="busca">
           <input
             id="search-input"
             type="text"
