adicionando const para pegar os dados dos stats do pokemon

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
           
           <h3 id="pokemon-name" class="card__nome"></h3>
           <p id="pokemon-type" class="card__tipo"></p>
+          <p id="pokemon-stat" class="card__stat"></p>
           <button id="next-btn" class="card__botao-next">>></button>
         </div>
        
