alterando a fonte dos valores dos stats

--- a/index.html
+++ b/index.html
@@ -46,6 +46,15 @@
         </div>
        
       </div>
+      <div class="stats">
+        <p class="vida">Hp</p>
+        <p class="ataque">atk</p>
+        <p class="defesa">def</p> 
+        <p class="especialAtaque">spAtk</p>
+        <p class="especialDefesa">spDef</p>
+        <p class="velocidade">speed</p>
+
+      </div>
       <div>
         <p class="hp" id="hp">Hp</p>
         <p class="atk" id="atk">atk</p>
