--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pokeapi.co</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Roboto+Mono&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="restet.css" />
   </head>
@@ -55,7 +58,7 @@
         <p class="velocidade">speed</p>
 
       </div>
-      <div>
+      <div class="stats__valor">
         <p class="hp" id="hp">Hp</p>
         <p class="atk" id="atk">atk</p>
         <p class="def" id="def">def</p> 
