adicionando um footer

--- a/index.html
+++ b/index.html
@@ -71,6 +71,8 @@
 
     </section>
 
+    <footer class="rodape">Criado por Marcelo Biotto</footer>
+
     <script src="script.js"></script>
     
   </body>
