adicionando o nome do autor ao footer

--- a/index.html
+++ b/index.html
@@ -71,7 +71,9 @@
 
     </section>
 
-    <footer class="rodape">Criado por Marcelo Biotto</footer>
+    <footer class="rodape">
+      <p class="rodape__informacao">Criado por Marcelo Biotto</p>
+    </footer>
 
     <script src="script.js"></script>
     
